--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div>
         <nav>
             <ul class="menu">
-                <li><a href="https://harizetamara.github.io/Nightmare-company/">🏠 Home</a></li>
+                <li><a href="https://harizetamara.github.io/Vanaheim/">🏠 Home</a></li>
                 <li><a href="viking.html">🪓 Viking</a></li>
                 <li><a href="druidas.html">🍄 Druidas</a></li>
                 <li><a href="pedido.html">📑 Pedidos</a></li>
