--- a/viking.html
+++ b/viking.html
@@ -13,7 +13,7 @@
         <h1 class="titulo">🪓 Viking</h1>
         <nav>
             <ul class="menu">
-                <li><a href="https://harizetamara.github.io/Nightmare-company/">🏠 Home</a></li>
+                <li><a href="https://harizetamara.github.io/Vanaheim/">🏠 Home</a></li>
                 <li><a href="druidas.html">🍄 Druidas</a></li>
                 <li><a href="pedido.html">📑 Pedidos</a></li>
             </ul>
