--- a/viking.html
+++ b/viking.html
@@ -97,7 +97,7 @@
       </label>
 
     <footer class="footer-text">
-        <a href="https://harizetamara.com" target="_blank" style="text-decoration: none; color: inherit;"> 
+        <a href="https://harizetamara.github.io/Portfolio/" target="_blank" style="text-decoration: none; color: inherit;"> 
             Desenvolvido por Harize Tamara &copy; 2025
           </a>
     </footer>
