--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="https://harizetamara.github.io/Vanaheim/">🏠 Home</a></li>
                 <li><a href="viking.html">🪓 Viking</a></li>
                 <li><a href="druidas.html">🍄 Druidas</a></li>
-                <li><a href="pedido.html">📑 Pedidos</a></li>
+                <!-- <li><a href="pedido.html">📑 Pedidos</a></li> -->
             </ul>
         </nav>
         </div>
