--- a/viking.html
+++ b/viking.html
@@ -15,7 +15,7 @@
             <ul class="menu">
                 <li><a href="https://harizetamara.github.io/Vanaheim/">🏠 Home</a></li>
                 <li><a href="druidas.html">🍄 Druidas</a></li>
-                <li><a href="pedido.html">📑 Pedidos</a></li>
+                <!-- <li><a href="pedido.html">📑 Pedidos</a></li> -->
             </ul>
         </nav>
     </header>
